  * Detect cycles of size 1 or 2
  * Always print top of stack
  (Fabrice Le Fessant)

- GPR#738: add hooks to monitor the GC. Some potentially expensive
  hooks are optional, and only called if ./configure is called
  with the new option --gc-hooks.

- GPR#891: Use -fno-builtin-memcmp when building runtime with gcc.
  (Leo White)

### Type system:

- PR#6608, GPR#901: unify record types when overriding all fields
  (Tadeu Zagallo and Gabriel Scherer, report by Jeremy Yallop,
  review by David Allsopp, Jacques Garrigue)

### Compiler user-interface and warnings:

- PR#7315, GPR#736: refine some error locations
  (Gabriel Scherer and Alain Frisch, report by Matej Košík)

- PR#7050, GPR#748 GPR#843 GPR#864: new `-args/-args0 <file>` parameters to
  provide extra command-line arguments in a file -- see documentation.
  User programs may implement similar options using the new `Expand`
  constructor of the `Arg` module.
  (Bernhard Schommer, review by Jérémie Dimino, Gabriel Scherer
   and Damien Doligez, discussion with Alain Frisch and Xavier Leroy,
   feature request from the Coq team)

<<<<<<< HEAD
- PR#7172, GPR#970: add extra (ocamlc -config) options
  int_size, word_size, ext_exe
  (Gabriel Scherer, request by Daniel Buenzli)

- GPR#829: better error when opening a module aliased to a functor
  (Alain Frisch)

- GPR#911: ocamlc/ocamlopt do not pass warnings-related options to C
  compiler when called to compile third-party C source files
  (Sébastien Hinderer)

* GPR#933: ocamlopt -p now reports an error on platforms that do not
  support profiling with gprof; dummy profiling libraries are no longer
  installed on such platforms.
  This can be tested with ocamlopt -config
  (Sébastien Hinderer)

- PR#7137, GPR#960: "-open" command line flag now accepts a module path
  (not a module name) (Arseniy Alekseyev and Leo White)

- GPR#1009: "ocamlc -c -linkall" and "ocamlopt -c -linkall" can now be used